--- a/structured_note/main.ipynb
+++ b/structured_note/main.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d908b5a7-8033-4723-a28b-3bddf4a08ce8",
    "metadata": {},
    "outputs": [],
@@ -213,19 +213,19 @@
     "# Параметры структурной ноты \n",
     "\n",
     "# Акции РФ-1\n",
-    "#term_years = 1\n",
-    "#barrier = 0.85\n",
-    "#barrier_reduce = 0\n",
-    "#coupon_term_month = 1\n",
-    "#russian_stocks = True \n",
+    "term_years = 1\n",
+    "barrier = 0.85\n",
+    "barrier_reduce = 0\n",
+    "coupon_term_month = 1\n",
+    "russian_stocks = True \n",
     "\n",
     "# Нота с иностранными акциями\n",
-    "term_years = 3\n",
-    "barrier = 1\n",
-    "barrier_reduce = 0.02\n",
-    "coupon_term_month = 3\n",
-    "russian_stocks = False \n",
-    "US_Stocks = ['AMD', 'ATVI', 'EA', 'TTWO', 'UBI']\n",
+    "#term_years = 3\n",
+    "#barrier = 1\n",
+    "#barrier_reduce = 0.02\n",
+    "#coupon_term_month = 3\n",
+    "#russian_stocks = False \n",
+    "#US_Stocks = ['AMD', 'ATVI', 'EA', 'TTWO', 'UBI']\n",
     "\n",
     "\n",
     "# Запускаем все\n",
@@ -256,13 +256,13 @@
      "output_type": "stream",
      "text": [
       "ПАРАМЕТРЫ РАСЧЕТА:\n",
-      "Срок продукта, год: 3\n",
-      "Барьер поставки: 100%\n",
-      "Понижение барьера поставки, в купонный период: 2.0%\n",
-      "Купонный период, месяцев: 3\n",
+      "Срок продукта, год: 1\n",
+      "Барьер поставки: 85.0%\n",
+      "Понижение барьера поставки, в купонный период: 0%\n",
+      "Купонный период, месяцев: 1\n",
       "----------------\n",
-      "Оценка вероятности срабатывания барьера поставки = 100.0%\n",
-      "Оценка вероятности автоколла по портфелю = 0.0%\n",
+      "Оценка вероятности срабатывания барьера поставки = 45.5%\n",
+      "Оценка вероятности автоколла по портфелю = 73.05%\n",
       "----------------\n"
      ]
     },
@@ -297,43 +297,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>38.40</td>\n",
-       "      <td>43.82</td>\n",
-       "      <td>86.36</td>\n",
-       "      <td>2.35</td>\n",
+       "      <td>GAZP</td>\n",
+       "      <td>14.52</td>\n",
+       "      <td>22.28</td>\n",
+       "      <td>87.61</td>\n",
+       "      <td>2.48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ATVI</td>\n",
-       "      <td>24.78</td>\n",
-       "      <td>10.53</td>\n",
-       "      <td>97.34</td>\n",
-       "      <td>2.02</td>\n",
+       "      <td>GMKN</td>\n",
+       "      <td>18.76</td>\n",
+       "      <td>13.26</td>\n",
+       "      <td>93.43</td>\n",
+       "      <td>2.19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>EA</td>\n",
-       "      <td>28.88</td>\n",
-       "      <td>20.94</td>\n",
-       "      <td>94.59</td>\n",
-       "      <td>2.00</td>\n",
+       "      <td>LKOH</td>\n",
+       "      <td>23.18</td>\n",
+       "      <td>12.49</td>\n",
+       "      <td>92.50</td>\n",
+       "      <td>2.23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>TTWO</td>\n",
-       "      <td>21.31</td>\n",
-       "      <td>25.49</td>\n",
-       "      <td>96.54</td>\n",
-       "      <td>2.02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>UBI</td>\n",
-       "      <td>0.15</td>\n",
-       "      <td>100.00</td>\n",
-       "      <td>100.00</td>\n",
-       "      <td>3.15</td>\n",
+       "      <td>YNDX</td>\n",
+       "      <td>6.16</td>\n",
+       "      <td>7.61</td>\n",
+       "      <td>96.48</td>\n",
+       "      <td>2.22</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -341,11 +333,10 @@
       ],
       "text/plain": [
        "  TICKER  TOTAL_YEARS  BARRIER_PRC  AUTOCALL_PRC  AVG_AUTOCALL_PERIOD\n",
-       "0    AMD        38.40        43.82         86.36                 2.35\n",
-       "1   ATVI        24.78        10.53         97.34                 2.02\n",
-       "2     EA        28.88        20.94         94.59                 2.00\n",
-       "3   TTWO        21.31        25.49         96.54                 2.02\n",
-       "4    UBI         0.15       100.00        100.00                 3.15"
+       "0   GAZP        14.52        22.28         87.61                 2.48\n",
+       "1   GMKN        18.76        13.26         93.43                 2.19\n",
+       "2   LKOH        23.18        12.49         92.50                 2.23\n",
+       "3   YNDX         6.16         7.61         96.48                 2.22"
       ]
      },
      "execution_count": 8,
@@ -369,8 +360,9 @@
     "print(f'Оценка вероятности срабатывания барьера поставки = {round((1 - p)*100, 2)}%')\n",
     "\n",
     "# Вероятность автоколла\n",
+    "p = 1\n",
     "for stock in result:\n",
-    "    p = p * stock['AUTOCALL_PRC']/100\n",
+    "    p = p * stock ['AUTOCALL_PRC']/100\n",
     "print(f'Оценка вероятности автоколла по портфелю = {round(p*100, 2)}%')\n",
     "print('----------------')\n",
     "\n",
